# network-bending

./: .gitignore  README.md  animate.py  build_custom_transforms.sh  clustering_models.py  example_transform_config.yaml  generate.py  generate_activation_training_set.py  generate_all.py  generate_sample_strips.py  get_clusters.py  latent_interp.py  model.py  projector.py  sample_strip_config.yaml  test_readwrite.py  train_classifiers.py  transform_layers.py  util.py
configs/: empty_transform_config.yaml  example_cluster_dict.yaml  example_transform_config.yaml
transforms/dilate/: CMakeLists.txt  op.cpp
transforms/erode/: CMakeLists.txt  op.cpp
transforms/resize/: CMakeLists.txt  op.cpp
transforms/rotate/: CMakeLists.txt  op.cpp
transforms/scale/: CMakeLists.txt  op.cpp
transforms/translate/: CMakeLists.txt  op.cpp
